<resources>
    <string name="app_name">体态检测</string>
    <string name="welcome_word">美好生活 健康体态</string>

    <!--登录注册部分字符串-->
    <string name="telephone">手机号</string>
    <string name="password">密码</string>
    <string name="do_not_remerberpassword">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="have_number">已有账号</string>
    <string name="do_check">获取验证码</string>
    <string name="how_do_check">点击左侧按钮获取验证码</string>
    <string name="again_input_password">再次输入密码</string>
    <string name="check_phone">验证手机号</string>
    <string name="changename">为保证您的数据隐私\n我们只需要您的用户名</string>
    <string name="tishi">必读！如何提高准确率？</string>
    <string name="button_begin_exercise">康复训练</string>
    <string name="zuijinyici">上次运动时间：</string>

    <!--主界面菜单-->
    <string name="mainView">首页</string>
    <string name="item1">用户信息</string>
    <string name="item_help">使用帮助</string>
    <string name="item_detail">体态详情</string>
    <string name="item2">体态排行榜</string>
    <string name="item3">退出登录</string>
    <string name="item4">清理未完成报告</string>
    <string name="item5">软件版本</string>
    <string name="jiancejiemian">检测界面</string>
    <string name="baogaojiemian">报告界面</string>
    <string name="mainView_Title_small">永久免费，放心使用</string>
    <string name="fenshupaihang">分数排行</string>
    <string name="jutipaihang">具体排行</string>
    <string name="ninyijing">您的体态优于全国 </string>
    <string name="deyonghu"> 的用户</string>

    <!--主页面的左侧界面-->
    <string name="look_statue">当前状态</string>
    <string name="di">第</string>
    <string name="di_back">天使用，准备开始吧!</string>
    <!--主页面左侧网格布局-->
    <string name="zonghepingfen">综合评分</string>
    <string name="tijiancishu">体检状态</string>
    <string name="zhengchangbuwei">正常部位</string>
    <string name="yichangbuwei">异常部位</string>
    <string name="yufangbuwei">预防部位</string>
    <string name="jibairenshu">击败人数</string>

    <string name="zongheqingkuang">综合情况</string>
    <string name="paimingqingkuang">健康排名</string>
    <string name="zonghejielun">综合结论</string>

    <!--主界面右侧界面，item中的三个选项和上方跑马灯-->
    <string name="item_title">报告标题：</string>
    <string name="item_name">申请人：</string>
    <string name="item_time">送达时间：</string>
    <string name="run_house">本界面下划可刷新！数据传送需要时间，请您耐心等候！超过5分钟未完成，
        说明您上传的照片不合格，请您长按删除，重新检测
        如需帮助，点击屏幕右上角菜单（三个点）中的“使用帮助”！</string>

    <!--关于检查流程中的字符串-->
    <string name="zhengmianzhao">正面全身照</string>
    <string name="cemianzhao">侧面全身照</string>
    <string name="check_submit">提交</string>

    <!--订单的详细界面-->
    <string name="xiaoxibaogao">详细报告</string>
    <string name="fanhui">返回</string>
    <string name="set_now_state">设置为当前状态</string>
    <string name="set_delet">删除该报告</string>
    <string name="titaishuju">体态数据</string>
    <string name="fengxianpinggu">风险评估</string>
    <string name="baogaojielun">报告结论</string>
    <string name="zhengchang">正常</string>
    <string name="yichang">高风险</string>
    <string name="chakanxiangqing">详情</string>

    <string name="sealine">水平线</string>
    <string name="title_activity_main_again_">Main_again_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="chakanxiangxi">查看教程</string>
    <string name="jinridaka">今日打卡</string>
    <string name="jiaozhengwenti">矫正问题：</string>

</resources>
